[project]
name = "wokwi-lcd-char-editor"
version = "0.1.0"
description = "A simple editor for creating custom LCD characters for Wokwi simulations."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual>=8.2.2",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]
